--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,11 @@ jobs:
           node-version: '20'       
 
       - name: Install dependencies
-        run: npm ci               
+        run: npm ci              
+      
+      - run:
+          echo "SUPABASE_URL=$SUPABASE_URL"   >> .env.local
+          echo "SUPABASE_SERVICE_KEY=$SUPABASE_SERVICE_KEY"   >> .env.local
 
       - name: Build project
         run: npm run build
