checking task completion

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ jobs:
     env:
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
       SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
 
     steps:
@@ -28,6 +29,7 @@ jobs:
       - run:
           echo "SUPABASE_URL=$SUPABASE_URL"   >> .env.local
           echo "SUPABASE_SERVICE_KEY=$SUPABASE_SERVICE_KEY"   >> .env.local
+          echo "OPENAI_API_KEY=$OPENAI_API_KEY >> .env.local
 
       - name: Build project
         run: npm run build
