--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^5.84.1",
     "next": "15.4.5",
+    "openai": "^5.11.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
