--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,8 @@ jobs:
         run: npm ci              
       
       - run:
-          echo "SUPABASE_URL=$SUPABASE_URL"   >> .env.local
-          echo "SUPABASE_SERVICE_KEY=$SUPABASE_SERVICE_KEY"   >> .env.local
+          echo "NEXT_PUBLIC_SUPABASE_URL=$SUPABASE_URL"   >> .env.local
+          echo "NEXT_PUBLIC_SUPABASE_SERVICE_KEY=$SUPABASE_SERVICE_KEY"   >> .env.local
           echo "OPENAI_API_KEY=$OPENAI_API_KEY >> .env.local
 
       - name: Build project
