--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,23 +9,29 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
       SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Create .env.local
+        run: |
+          cat <<'EOF' > .env.local
+          SUPABASE_URL=${{ secrets.SUPABASE_URL }}
+          SUPABASE_SERVICE_KEY=${{ secrets.SUPABASE_SERVICE_KEY }}
+          OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+          EOF
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'       
+          node-version: '20'
 
       - name: Install dependencies
-        run: npm ci              
-        
+        run: npm ci
 
       - name: Build project
         run: npm run build
