--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
       NEXT_PUBLIC_SUPABASE_URL:   ${{ secrets.SUPABASE_URL }}
       NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
       OPENAI_API_KEY:             ${{ secrets.OPENAI_API_KEY }}
+      PLISIO_API_KEY:             ${{ secrets.PLISIO_API_KEY}}
 
 
     steps:
@@ -26,6 +27,7 @@ jobs:
           SUPABASE_URL=${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_KEY=${{ secrets.SUPABASE_SERVICE_KEY }}
           OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+          PLISIO_API_KEY=${{ secrets.PLISIO_API_KEY}}
           NEXT_PUBLIC_SUPABASE_URL=${{ secrets.SUPABASE_URL }}
           NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
           EOF
