--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
       NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
       OPENAI_API_KEY:             ${{ secrets.OPENAI_API_KEY }}
       PLISIO_API_KEY:             ${{ secrets.PLISIO_API_KEY}}
+      TELEGRAM_BOT_TOKEN:             ${{ secrets.TELEGRAM_BOT_TOKEN}}
 
 
     steps:
@@ -28,6 +29,7 @@ jobs:
           SUPABASE_SERVICE_KEY=${{ secrets.SUPABASE_SERVICE_KEY }}
           OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
           PLISIO_API_KEY=${{ secrets.PLISIO_API_KEY}}
+          TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN}}
           NEXT_PUBLIC_SUPABASE_URL=${{ secrets.SUPABASE_URL }}
           NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
           EOF
