--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.59.0",
     "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^5.84.1",
+    "dotenv": "^17.2.1",
     "next": "15.4.5",
     "openai": "^5.11.0",
     "react": "19.1.0",
